Bug 100325 - Assertion failed error when creating report with wizard
Summary: Assertion failed error when creating report with wizard
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha0+
Hardware: All All
: medium major
Assignee: Michael Stahl
URL:
Whiteboard: target:5.3.0 target:5.2.0.1
Keywords: haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2016-06-11 08:46 UTC by Julien Nabet
Modified: 2016-10-25 18:54 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
console bt logs (4.11 KB, text/plain)
2016-06-11 08:46 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Nabet 2016-06-11 08:46:39 UTC
Created attachment 125601 [details]
console bt logs

On pc Debian x86-64 with master sources updated yesterday (fd8f328462fc20d9a3a03b5f8ceb78faedeaa602) + enable-dbgutil and render=gtk3, I got a crash when I try to create a report.

Steps to reproduce:
1) Launch Base
2) Create hsqldb db file
3) Click Reports panel
4) Click "Use Wizard to create Report..."
=> Crash

(no crash with Design view)
Comment 1 Julien Nabet 2016-06-11 08:47:59 UTC
Michael: noticing https://cgit.freedesktop.org/libreoffice/core/commit/?id=291f55edf3d5c1d443cbd9a06bc6f7fd773884e5, thought you might be interested in this one.
Comment 2 Julien Nabet 2016-06-11 08:52:36 UTC
(gdb) p rDescriptor
$1 = uno::Sequence of length 2 = {{Name = "Storage", Handle = 0, Value = 
      uno::Any {<com::sun::star::container::XNameAccess> = {<com::sun::star::container::XElementAccess> = {<com::sun::star::uno::XInterface> = {_vptr.XInterface = 0x432d1f8}, <No data fields>}, <No data fields>}, <com::sun::star::lang::XComponent> = {<com::sun::star::uno::XInterface> = {_vptr.XInterface = 0x6666666600000000}, <No data fields>}, <No data fields>}, State = com::sun::star::beans::PropertyState_DIRECT_VALUE}, {Name = "ReadOnly", Handle = 0, Value = uno::Any 1 '\001', 
    State = com::sun::star::beans::PropertyState_DIRECT_VALUE}}
Comment 3 Joel Madero 2016-06-13 00:41:02 UTC
Bodhi Moksha
Version: 5.3.0.0.alpha0+
Build ID: 7c983445656e1f1942cf2d7398a77342004ed168
CPU Threads: 2; OS Version: Linux 3.16; UI Render: default; 
Locale: en-US (en_US.UTF-8)

Cannot reproduce.
Comment 4 Aron Budea 2016-06-13 03:05:14 UTC
Confirmed in Windows 7, 32-bit build from two days ago (c0d7dfa56c8a335bdea1be2ddce33a0f19b28bbd).

I get assertion failed in Windows, expression: !sVal.isEmpty()
It points to the same line as #2 in the backtrace.
Comment 5 Alex Thurgood 2016-06-13 08:36:05 UTC
No crash with 

Version: 5.3.0.0.alpha0+
Build ID: d6a6f587a852ba5c993c658b6b6432a65207f5b7
Threads CPU : 4; Version de l'OS :Linux 3.19; UI Render : par défaut; 
Locale : fr-FR (fr_FR.UTF-8)

Not a debug build
Comment 6 Alex Thurgood 2016-06-13 08:37:07 UTC
(In reply to Alex Thurgood from comment #5)
> No crash with 
> 
> Version: 5.3.0.0.alpha0+
> Build ID: d6a6f587a852ba5c993c658b6b6432a65207f5b7
> Threads CPU : 4; Version de l'OS :Linux 3.19; UI Render : par défaut; 
> Locale : fr-FR (fr_FR.UTF-8)
> 
> Not a debug build

This is on a Linux Mint 17.3 box
Comment 7 Aron Budea 2016-06-13 16:10:54 UTC
The error is assertion failed, so it only comes up with a debug build.
Comment 8 Michael Stahl 2016-06-15 16:16:06 UTC
fixed on master
Comment 9 Commit Notification 2016-06-15 16:16:19 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cd7671ef5e3102e91c68588d1ccc39d2521af561

tdf#100325 reportdesign: try to set URL as DocumentBaseURL

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2016-06-15 21:09:17 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=24114cadf10aa9d843d6735d90fcddee3747724d&h=libreoffice-5-2

tdf#100325 reportdesign: try to set URL as DocumentBaseURL

It will be available in 5.2.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.