tdf#100325 reportdesign: try to set URL as DocumentBaseURL

... if it is missing, similar to what SfxObjectShell::DoLoad() does.

Change-Id: I5b0ae1f892355a5e9786d590c821656b58d29cf2
(cherry picked from commit cd7671ef5e3102e91c68588d1ccc39d2521af561)
Reviewed-on: https://gerrit.libreoffice.org/26332
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Stahl <mstahl@redhat.com>